# space-telemetry-anom-llm

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  repomix-foxes-pr1.txt  repomix-space-telemetry.txt  requirements-local.txt
config/: unsloth-train.yaml
contributions/: README.md  anomllm-issue-draft.md  tsb-ad-submission-notes.md  where-it-measures-up.md
contributions/kaggle/: star-pipeline-esa-ad.ipynb
data/advice_grading/: advice_sample.jsonl
data/frontier/: frontier_prompts.jsonl  frontier_rag_prompts.jsonl  frontier_sample.jsonl
data/rag/: ESA-Mission1__channel_12.faiss  ESA-Mission1__channel_13.faiss  ESA-Mission1__channel_14.faiss  ESA-Mission1__channel_15.faiss  ESA-Mission1__channel_16.faiss  ESA-Mission1__channel_17.faiss  ESA-Mission1__channel_18.faiss  (+123 more)
huggingface/: README_publishing.md  esa-ad-star-splits_DATASETCARD.md  foxes-repro_MODELCARD.md  qwen3-8b-advice-gguf_MODELCARD.md  qwen3-vl-8b-detection_MODELCARD.md
results/: advice_grading_sample.json  advice_judgments.json  comparison_metrics.json  comparison_report.md  ensemble_metrics.json  ensemble_pr_curve.json  frontier_classifications.json  frontier_fewshot_classifications.json  inference_base.json  inference_base_fewshot.json  inference_base_rag.json  inference_frontier_fewshot.json  inference_frontier_rag.json  inference_frontier_sample.json  inference_test.json  inference_test_scored.json  inference_vision.json  inference_vision_base.json  inference_vision_scored.json  llm_pr_curve.json  vision_pr_curve.json
scripts/: parallel_gguf_download.sh
scripts/cloud/: README.md  (+3 more)
(+63 files in other folders)
