[project]
name = "star-pipeline"
version = "0.1.0"
description = "Space Telemetry Anomaly Detection & Resolution Pipeline"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.4.0",
    "torch>=2.2.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "h5py>=3.10.0",
    "kaggle>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]
lstm = [
    "keras>=3.0.0",
]
# Phase 16 (mini-FOXES ViT + XAI showcase, dedicated branch). torch, numpy, matplotlib,
# pillow, h5py are already in the core deps above; this group adds only the FOXES-specific
# plumbing (timm primitives + HF dataset streaming for the real EUV->SXR subsample).
foxes = [
    "timm>=1.0.0",
    "datasets>=2.18.0",
    "huggingface_hub>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
